--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>Mr. Rose</title>
+    <title>Jackson Woodward</title>
   </head>
   <body>
     <h1>Mr. Rose!</h1>
